@@ -10,28 +10,30 @@
 		<TD WIDTH="100%" class="fall">
 			<TABLE cellpadding="5" cellspacing="0" WIDTH="100%">
 				<TR class="dark">
-					<TD class="fleftu bold nobr" style="width: 14%;">{trans("IP Address:")}</TD>
-					<TD class="fbt nobr" style="width: 14%;">{trans("MAC:")}</TD>
-					<TD class="fbt bold nobr" style="width: 14%;">{trans("Started:")}</TD>
-					<TD class="fbt bold nobr" style="width: 14%;">{trans("Finished:")}</TD>
-					<TD class="fbt bold nobr" style="width: 14%;">{trans("Time Duration:")}</TD>
-					<TD class="fbt nobr" style="width: 14%;">{trans("Downloaded:")}</TD>
+					<TD class="fleftu bold nobr" style="width: 12%;">{trans("IP Address:")}</TD>
+					<TD class="fbt nobr" style="width: 12%;">{trans("MAC:")}</TD>
+					<TD class="fbt bold nobr" style="width: 12%;">{trans("Started:")}</TD>
+					<TD class="fbt bold nobr" style="width: 12%;">{trans("Finished:")}</TD>
+					<TD class="fbt bold nobr" style="width: 12%;">{trans("Time Duration:")}</TD>
+					<TD class="fbt bold nobr" style="width: 12%;">{trans("Terminate Cause:")}</TD>
+					<TD class="fbt nobr" style="width: 12%;">{trans("Downloaded:")}</TD>
 					<TD class="frightu nobr" style="width: 16%;">{trans("Uploaded:")}</TD>
 				</TR>
 				{section loop=$nodesessions name=session}
 				{cycle name=sessionclass values="light,lucid" print=false}
 				<TR class="{cycle name=sessionclass}" onmouseover="addClass(this, 'highlight')" onmouseout="removeClass(this, 'highlight')">
-					<TD class="bold nobr" style="width: 14%;">{$nodesessions[session].ipaddr}</TD>
-					<TD class="nobr" style="width: 14%;">{$nodesessions[session].mac}</TD>
-					<TD class="nobr" style="width: 14%;"><span class="bold">{$nodesessions[session].start|date_format:"%Y.%m.%d"}</span> {$nodesessions[session].start|date_format:"%H:%M:%S"}</TD>
-					<TD class="nobr" style="width: 14%;"><span class="bold">{$nodesessions[session].stop|date_format:"%Y.%m.%d"}</span> {$nodesessions[session].stop|date_format:"%H:%M:%S"}</TD>
-					<TD class="bold nobr" style="width: 14%;">{$nodesessions[session].duration}</TD>
-					<TD class="nobr" style="width: 14%;">{$nodesessions[session].download}</TD>
-					<TD class="nobr" style="width: 16%;">{$nodesessions[session].upload}</TD>
+					<TD class="bold nobr">{$nodesessions[session].ipaddr}</TD>
+					<TD class="nobr">{$nodesessions[session].mac}</TD>
+					<TD class="nobr"><span class="bold">{$nodesessions[session].start|date_format:"%Y.%m.%d"}</span> {$nodesessions[session].start|date_format:"%H:%M:%S"}</TD>
+					<TD class="nobr"><span class="bold">{$nodesessions[session].stop|date_format:"%Y.%m.%d"}</span> {$nodesessions[session].stop|date_format:"%H:%M:%S"}</TD>
+					<TD class="bold nobr">{$nodesessions[session].duration}</TD>
+					<TD class="nobr">{$nodesessions[session].terminatecause}</TD>
+					<TD class="nobr">{$nodesessions[session].download}</TD>
+					<TD class="nobr">{$nodesessions[session].upload}</TD>
 				</TR>
 				{sectionelse}
 				<TR>
-					<TD class="text-center" style="width: 100%;" colspan="7">
+					<TD class="text-center" style="width: 100%;" colspan="8">
 						<P>&nbsp;</P>
 						<P><span class="bold">{trans("That are no sessions for this node.")}</span></P>
 						<P>&nbsp;</P>
